// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component Snapshots should match snapshots as primary themed 1`] = `
<div
  className="foo"
  style={
    Object {
      "color": "red",
    }
  }
>
  Foo
</div>
`;

exports[`Test Component Snapshots should match snapshots as secondary themed 1`] = `
<div
  className="foo"
  style={
    Object {
      "color": "blue",
    }
  }
>
  Foo
</div>
`;
